[gd_scene load_steps=15 format=2]

[ext_resource path="res://client/ui/ui.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/world/world.tscn" type="PackedScene" id=2]
[ext_resource path="res://client/world/world.gd" type="Script" id=3]
[ext_resource path="res://client/effects/confetti_particles.tscn" type="PackedScene" id=4]
[ext_resource path="res://client/world/level_generator.tscn" type="PackedScene" id=5]
[ext_resource path="res://client/music/peak_and_drozerix_-_spectrum.ogg" type="AudioStream" id=6]
[ext_resource path="res://client/audio/finish_sfx.ogg" type="AudioStream" id=7]
[ext_resource path="res://client/world/player/player.tscn" type="PackedScene" id=8]
[ext_resource path="res://client/world/items/flomb_projectile.tscn" type="PackedScene" id=9]
[ext_resource path="res://client/music/music_player.tscn" type="PackedScene" id=10]
[ext_resource path="res://client/world/background/parallax_clouds.tscn" type="PackedScene" id=11]
[ext_resource path="res://client/world/main_camera.tscn" type="PackedScene" id=12]
[ext_resource path="res://client/effects/wind_particles.tscn" type="PackedScene" id=15]
[ext_resource path="res://client/world/world_environment.tres" type="Environment" id=17]

[node name="World" instance=ExtResource( 2 )]
script = ExtResource( 3 )
Player = ExtResource( 8 )
SpawnableObjects = [ ExtResource( 9 ) ]
Confetti = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="0"]
environment = ExtResource( 17 )

[node name="UI" parent="." index="1" instance=ExtResource( 1 )]
layer = 2
follow_viewport_enable = false

[node name="MainCamera" parent="." index="2" instance=ExtResource( 12 )]

[node name="FinishMusic" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 6 )
bus = "Music"
__meta__ = {
"_editor_description_": ""
}

[node name="FinishChime" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 7 )
volume_db = 5.0
bus = "Sounds"

[node name="MusicPlayer" parent="." index="5" instance=ExtResource( 10 )]

[node name="CloudBackground" parent="." index="6" instance=ExtResource( 11 )]

[node name="LevelGenerator" parent="." index="7" instance=ExtResource( 5 )]

[node name="WindParticles" parent="." index="9" instance=ExtResource( 15 )]
position = Vector2( 1280, 0 )

[connection signal="countdown_finished" from="UI" to="." method="_on_UI_countdown_finished"]
[connection signal="request_restart" from="UI" to="." method="_on_UI_request_restart"]
[connection signal="spectate_change" from="UI" to="." method="_on_UI_spectate_change"]
